<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/user_greeting_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hi, User"
            android:textColor="@color/white"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/logout_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00FFFFFF"
            android:text="@string/log_out"
            android:drawableTop="@drawable/baseline_logout_24"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="#FFE0E0E0"
                android:text="@string/enter_journey_details"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/date_of_journey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="start"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40dp"
                android:hint="@string/date_of_journey"
                android:inputType="date"
                android:autofillHints="password" />

            <EditText
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="start"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40dp"
                android:hint="@string/from"
                android:autofillHints="postalAddress"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/get_location_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:text="@string/get_location"
                android:textColor="@color/black"
                android:background="#00FFFFFF"
                android:drawableLeft="@drawable/baseline_my_location_24"/>

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:src="@drawable/baseline_keyboard_double_arrow_down_24"
                 android:contentDescription="@string/none" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:labelFor="@+id/to_spinner"/>

            <Spinner
                android:id="@+id/to_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:entries="@array/destinations"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="Book return tickets"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/search_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_tickets"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/select_bus_card"
        android:padding="32dp"
        app:cardCornerRadius="20dp"
        android:minHeight="100dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#FFE0E0E0"
            android:text="@string/bus"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/select_flight_card"
        android:padding="32dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        android:minHeight="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#FFE0E0E0"
            android:text="@string/flight"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>